<resources>
    <string name="app_name">Shared Floor</string>

    <!--  -->
    <string name="title_activity_selector_fragments_">Shared Floor</string>
    <string name="title_activity_selector">Shared Floor</string>
    <string name="loginOK">Autentificación correcta</string>

    <!-- Menu items-->
    <string name="action_settings">Configuracion</string>

    <!-- expenses -->
    <string name="expense_paid">Pagó:</string>
    <string name="expense_for_user">Por persona</string>
    <string name="expense_per_user_paid_text">Por persona</string>
    <string name="expense_nametil">Nombre del gasto</string>
    <string name="expense_amounttil">Cantidad</string>

    <!-- Login -->
    <string name="loginEDThintUsername">Usuario</string>
    <string name="loginEDThintPassword">Contraseña</string>
    <string name="loginCHBRemember">Recordar</string>
    <string name="loginBTNOK">Iniciar Sesión</string>
    <string name="loginTXVForget">Olvidé mi contraseña</string>
    <string name="loginTXVRegister">Registrarse</string>


    <!-- loggin links -->
    <string name="loginTXVlinkRegister">
        <!-- test url -->
        <a href="https://www.google.es/">Registrarse</a>
    </string>

    <string name="loginTXVlinkForget">
        <!-- test url -->
        <a href="https://www.google.es/">Olvidé mi contraseña</a>
    </string>

    <string name="home_title">HOGAR</string>
    <string name="expense_title">Gastos</string>
    <string name="purchase_title">Lista</string>
    <string name="clean_title">Limpieza</string>
    <string name="title_activity_general_setting_activity">Configuracion</string>
    <string name="action_about">Acerca de</string>
    <string name="additem_btn_ok">Añadir</string>

    <!-- add item -->
    <string name="additem_dialog_title">Añadir elemento a la lista</string>
    <string name="additem_dialog_message">Nombre del elemento</string>

    <!-- delete item-->
    <string name="deleteitem_dialog_title">Eliminar</string>
    <string name="deleteitem_dialog_mens">Eliminar de la lista el elemento: </string>
    <string name="deleteitem_dialog_cancelbtn">No Eliminar</string>
    <string name="deleteitem_dialog_okbtn">Eliminar</string>
    <string name="deleteitem_snackbarmens">Eliminado:</string>

    <string name="generalSettinghome_title">Configuracion del hogar</string>
    <string name="generalSetting_listTypes">Lista de tipos de elementos</string>
    <string name="action_listTypes">Tipos de elementos</string>
    <string name="cleanBTNconfig">Configurar</string>
    <string name="euro">€</string>
    <string name="deleteMens">Eliminado:</string>
    <string name="action_close">Cerrar Sessón</string>
    <string name="action_sortbyalph">Orden alfabetico</string>
    <string name="deleteexpense_dialog_title">Eliminar Gasto</string>
    <string name="deleteexpense_dialog_mens">Eliminar el gasto:</string>
    <string name="deleteexpense_snackbar">Eliminado el gasto:</string>
    <string name="additem_snackbar">Añadido el elemento</string>


    <string-array name="titlesTabs">
        <item>@string/home_title</item>
        <item>@string/expense_title</item>
        <item>@string/purchase_title</item>
        <item>@string/clean_title</item>
    </string-array>

</resources>
