<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:layout_margin="@dimen/expense_margin"
            android:focusable="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/P_EXPENSE_tilAmount"
                android:layout_below="@+id/P_EXPENSE_tilNameExpense"
                android:hint="@string/expense_amounttil"
                android:layout_marginTop="@dimen/expense_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/expense_text_size"
                    android:text=""
                    android:id="@+id/P_EXPENSE_edtAmountExpense" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/P_EXPENSE_tilNameExpense"
                android:hint="@string/expense_nametil">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/expense_text_size"
                    android:text=""
                    android:id="@+id/P_EXPENSE_edtUsername" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/P_EXPENSE_tilAmount"
                android:layout_marginTop="@dimen/expense_margin">

                <TextView
                    android:text="@string/expense_paid"
                    android:textSize="@dimen/expense_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/P_EXPENSE_labelwhopaid"
                    android:layout_weight="0" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/P_EXPENSE_spinerwhoPaid"
                    android:layout_weight="1" />

            </LinearLayout>



        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>